--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h3><a title="Steam" href="https://www.mediafire.com/file/70yanz7b19zik9c/steam.zip/file">Steam utan administrat&ouml;rsr&auml;ttigheter</a></h3>
 <h2 style="color: #2e6c80;">&nbsp;</h2>
 <h2 style="color: #2e6c80;">V&aring;ra guider:</h2>
-<p><img style="float: left;" src="https://html-online.com/img/01-interactive-connection.png" alt="interactive connection" width="45" /></p>
-<p>Interactive source editor</p>
+<h3><img style="float: left;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/2048px-Steam_icon_logo.svg.png" alt="interactive connection" width="45" /></h3>
+<h3><a href="https://www.youtube.com/watch?v=69Vmvxc0Akw">Steam utan administrat&ouml;rsr&auml;ttigheter</a></h3>
 <p>&nbsp;</p>
 <h4>Vi jobbar aktivt p&aring; den h&auml;r hemsidan. Om du vill f&ouml;rs&ouml;ka kontakta oss, skicka till <span style="text-decoration: underline;">gurka.sde@outlook.com</span>.</h4>
